--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,25 @@
 /* GLOBAL */
-body, div, span{
+body, div, span, input{
     margin: 0;
     padding: 0;
+}
+body{
+    min-width: 600px;
+    min-height: 620px;
 }
 div, span{
     display: block;
     position: relative;
+}
+span{
+    width: 100%;
+    height: 100%;
+    line-height: 100px;
+    vertical-align: middle;
+    cursor: pointer;
+}
+html, body, #wrapper{
+    height: 100%;
 }
 #wrapper{
     width: 500px;
@@ -17,6 +31,7 @@ div, span{
     height: 470px;
     padding: 15px;
     top: 50%;
+    margin-top: -250px;
     background: #bbada0;
     border-radius: 10px;
 }
@@ -55,9 +70,35 @@ div, span{
     z-index: 25;
 }
 .empty{
-    background: rgba(238, 228, 218, 0.35);
+    background: rgba(238, 228, 218, 0.35) !important;
     z-index: 15;
 }
+#btnNewGame{
+    position: absolute;
+    margin-top: 50%;
+    padding: 9px 14px;
+    background: #8f7a66;
+    border-radius: 3px;
+    line-height: 40px;
+    cursor: pointer;
+    font: normal 25px "ClearSansBold";
+    color: #f9f6f2;
+    z-index: 100;
+}
+/*#btnTop {
+    position: absolute;
+    left: 75%;
+    top: 0;
+    font: 1em "OfficinaSensMediumC";
+    border-radius: 0 0 7px 7px;
+    border: 1px dashed white;
+    border-top-style: none;
+    padding: 0.8em 1em 0.5em 1em;
+}
+#btnTop:hover {
+    border-style: solid;
+    border-top: none;
+}*/
 
 /* FONTS */
 @font-face{
